# MAWpy

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AddressOscillation.py  CombineExtractedStays.py  Demo.ipynb  IncrementalClustering.py  README.md  ReadAndPartition.py  TraceSegmentationClustering.py  UpdateStayDuration.py  WriteCSVFile.py  class_cluster.py  distance.py  incremental_clustering.py  noxfile.py  oscillation_type1.py  pyproject.toml  util_func.py  workflow1.py  workflow2.py  workflow3.py  workflow4.py  workflow5.py  workflow6.py
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml
docs/: MAWfwk.md  _config.yml  _toc.yml  abstract.md  demo.ipynb  index.md  intro.md  references.bib  workflows.md
docs/references/: index.md
docs/references/steps/: address_oscillation.rst  incremental_clustering.rst  index.md  trace_segmentation_clustering.rst  update_stay_duration.rst
docs/references/workflows/: ao_ic_usd.rst  ic_usd.rst  ic_usd_ao_usd.rst  index.md  tsc_ic_usd.rst  tsc_usd.rst
src/mawpy/: AddressOscillation.py  Cluster.py  CombineExtractedStays.py  IncrementalClustering.py  ReadAndPartition.py  TraceSegmentationClustering.py  UpdateStayDuration.py  WriteCSVFile.py  __init__.py  class_cluster.py  cluster.py  constants.py  distance.py  incremental_clustering.py  io.py  oscillation_type1.py  util_func.py  workflow1.py  workflow2.py  workflow3.py  workflow4.py  workflow5.py  workflow6.py
src/mawpy/legacy/: AddressOscillation.py  CombineExtractedStays.py  IncrementalClustering.py  ReadAndPartition.py  TraceSegmentationClustering.py  UpdateStayDuration.py  WriteCSVFile.py  incremental_clustering.py  oscillation_type1.py  util_func.py  workflow1.py  workflow2.py  workflow3.py  workflow4.py  workflow5.py  workflow6.py
src/mawpy/steps/: __init__.py  address_oscillation.py  incremental_clustering.py  trace_segmentation_clustering.py  update_stay_duration.py
src/mawpy/utilities/: __init__.py  cluster.py  common.py  preprocessing.py  validations.py
src/mawpy/workflows/: ao_ic_usd.py  ic_usd.py  ic_usd_ao_usd.py  tsc_ic_usd.py  tsc_usd.py  workflow1.py  workflow2.py
tests/: test_dummy.py  test_io.py  test_validations.py
tests/resources/: ao_ic_usd_output_for_test_input.csv  ic_usd_ao_usd_output_for_test_input.csv  ic_usd_output_for_test_input.csv  test_input.csv  tsc_ic_usd_output_for_test_input.csv  tsc_usd_output_for_test_input.csv
tests/utilities/: test_common.py
tests/workflows/: test_ao_ic_usd.py  test_ic_usd.py  test_ic_usd_ao_usd.py  test_tsc_ic_usd.py  test_tsc_usd.py  test_workflow1.py  test_workflow2.py
