[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project]
name = "MAWpy"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1.0",
    "scikit-learn>=1.3.0",
    "geopy>=2.4.1",

]
description = "Mobility Analysis Workflow in Python"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.6.1",
    "nox>=2024.3.2",
]
build = [
    "hatch>=1.9.2"
]
