[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/mawpy/version.py"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[project]
name = "MAWpy"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1.0",
    "scikit-learn>=1.3.0",
    "geopy>=2.4.1",
    "fsspec>=2024.6.1,<2024.7",
    "openpyxl>=3.1.5,<3.2",
    "psutil>=5.9.8",

]
description = "Mobility Analysis Workflow in Python"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.license]
file = "LICENSE"

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.6.1",
    "nox>=2024.3.2",
    "hypothesis>=6.108.2,<6.109",
]
docs = [
    "jupyter-book",
]
